package packageTeste;

import packageTeste.util.FileParser;


public class Runner {
	public static void main(String[] args) {
		FileParser.parseFile("src/packageTeste/teste.js");
	}
}
