@startuml

class Runner {
    void main()
}
Runner -- FileParser

class FileParser{
    void parseFile(String filePath)
    char[] readFile(String filePath)
}
FileParser -- StatementProcessor

class StatementProcessor{
    void process(JavaScriptUnit jSUnit)
    void process(List<ASTNode> statements)
    void process(VariableDeclarationStatement varDeclStmt)
}
StatementProcessor -- FunctionProcessor
StatementProcessor -- TypeProcessor

class FunctionProcessor{
    void process(FunctionDeclaration funcDec)
    String extractName(FunctionDeclaration funcDec)
    String[] extractParameters(FunctionDeclaration funcDec)
}

class TypeProcessor{
    void process(TypeDeclaration typeDec)
    String extractName(TypeDeclaration typeDec)
}

@enduml